kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  selector:
    app: consul
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: consul-nginx
spec:
  selector:
    app: consul
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
