kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 2022.mariborsodeluj.si
        - mariborsodeluj.si
        - www.mariborsodeluj.si
      secretName: consul-maribor-tls
  rules:
    - host: 2022.mariborsodeluj.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consul
                port:
                  number: 3000
    - host: mariborsodeluj.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consul
                port:
                  number: 3000
    - host: www.mariborsodeluj.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consul
                port:
                  number: 3000
